- Se corrigio el bug de visibilidad en filtro-reporte - Se agregaron los filtros al reporte de suscripciones: Cobrador y tipo de suscripcion

--- a/src/app/modulos/impresion/filtros-reporte/filtros-reporte.component.scss
+++ b/src/app/modulos/impresion/filtros-reporte/filtros-reporte.component.scss
@@ -12,9 +12,9 @@ $tamanioLetra: 10px;
     border: 1px solid black;
     padding: 5px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    column-gap: 10px;
+    column-gap: 15px;
 }
 
 .description-content{
