--- a/src/app/modulos/impresion/reporte-suscripciones/reporte-suscripciones.component.scss
+++ b/src/app/modulos/impresion/reporte-suscripciones/reporte-suscripciones.component.scss
@@ -2,13 +2,13 @@ $colorAlternoFila: #ececec;
 
 @media screen {
     * {
-        display: hidden;
+        visibility: hidden;
     }
 }
 
 @media print {
     * {
-        display: visible;
+        visibility: visible;
     }
 }
 
